--- a/demo/index.html
+++ b/demo/index.html
@@ -17,15 +17,25 @@
   </head>
   <body>
     <golden-layout id="layout">
-      <golden-layout-register type="hello">
+      <golden-layout-register component-type="hello">
         <template> <div>hi</div></template></golden-layout-register
       >
-      <golden-layout-row>
-        <golden-layout-component type="hello" title="hi">
-        </golden-layout-component>
-        <golden-layout-component type="hello" title="hi2">
-        </golden-layout-component>
-      </golden-layout-row>
+      <div style="display: flex; flex-direction: row; flex: 1;">
+        <ul>
+          <golden-layout-drag-source component-type="hello"
+            ><li>hii</li></golden-layout-drag-source
+          >
+        </ul>
+
+        <golden-layout-root style="flex: 1">
+          <golden-layout-row>
+            <golden-layout-component component-type="hello" title="hi">
+            </golden-layout-component>
+            <golden-layout-component component-type="hello" title="hi2">
+            </golden-layout-component>
+          </golden-layout-row>
+        </golden-layout-root>
+      </div>
     </golden-layout>
 
     <script type="module">
@@ -34,12 +44,19 @@
         GoldenLayoutRow,
         GoldenLayoutComponent,
         GoldenLayoutRegister,
+        GoldenLayoutDragSource,
+        GoldenLayoutRoot
       } from '../dist/index.js';
 
       customElements.define('golden-layout', GoldenLayout);
       customElements.define('golden-layout-row', GoldenLayoutRow);
       customElements.define('golden-layout-component', GoldenLayoutComponent);
       customElements.define('golden-layout-register', GoldenLayoutRegister);
+      customElements.define('golden-layout-root', GoldenLayoutRoot);
+      customElements.define(
+        'golden-layout-drag-source',
+        GoldenLayoutDragSource
+      );
     </script>
   </body>
 </html>
