--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
       <golden-layout-register component-type="hello">
         <template> <div>hi</div></template></golden-layout-register
       >
-      <div style="display: flex; flex-direction: row; flex: 1;">
+      <div style="display: flex; flex-direction: row; flex: 1">
         <ul>
           <golden-layout-drag-source component-type="hello"
             ><li>hii</li></golden-layout-drag-source
@@ -29,7 +29,8 @@
 
         <golden-layout-root style="flex: 1">
           <golden-layout-row>
-            <golden-layout-component component-type="hello" title="hi">
+            <golden-layout-component title="hi">
+              <div><span>Custom Thing</span></div>
             </golden-layout-component>
             <golden-layout-component component-type="hello" title="hi2">
             </golden-layout-component>
@@ -45,7 +46,7 @@
         GoldenLayoutComponent,
         GoldenLayoutRegister,
         GoldenLayoutDragSource,
-        GoldenLayoutRoot
+        GoldenLayoutRoot,
       } from '../dist/index.js';
 
       customElements.define('golden-layout', GoldenLayout);
