--- a/demo/index.html
+++ b/demo/index.html
@@ -16,32 +16,7 @@
     </style>
   </head>
   <body>
-    <golden-layout id="layout">
-      <golden-layout-register component-type="hello">
-        <template> <div>hi</div></template></golden-layout-register
-      >
-      <div style="display: flex; flex-direction: row; flex: 1">
-        <ul>
-          <golden-layout-drag-source component-type="hello"
-            ><li>hii</li></golden-layout-drag-source
-          >
-        </ul>
-
-        <golden-layout-root style="flex: 1">
-          <golden-layout-row>
-            <golden-layout-row width="50">
-              <golden-layout-component component-type="hello" title="hi2">
-              </golden-layout-component>
-            </golden-layout-row>
-            <golden-layout-column width="10">
-              <golden-layout-component title="hi" unclosable>
-                <div><span>Custom Thing2</span></div>
-              </golden-layout-component>
-            </golden-layout-column>
-          </golden-layout-row>
-        </golden-layout-root>
-      </div>
-    </golden-layout>
+    <div id="layout"></div>
 
     <script type="module">
       import {
@@ -53,6 +28,7 @@
         GoldenLayoutDragSource,
         GoldenLayoutRoot,
       } from '../dist/index.js';
+      import { render, html } from 'lit';
 
       customElements.define('golden-layout', GoldenLayout);
       customElements.define('golden-layout-row', GoldenLayoutRow);
@@ -63,6 +39,47 @@
       customElements.define(
         'golden-layout-drag-source',
         GoldenLayoutDragSource
+      );
+      render(
+        html`
+          <golden-layout id="layout">
+            <golden-layout-register component-type="hello">
+              <template> <div>hi</div></template></golden-layout-register
+            >
+            <golden-layout-register
+              component-type="reactive-template"
+              .template=${({ text }) => html`<div>${text}</div>`}
+            ></golden-layout-register>
+            <div style="display: flex; flex-direction: row; flex: 1">
+              <ul>
+                <golden-layout-drag-source component-type="hello"
+                  ><li>hii</li></golden-layout-drag-source
+                >
+              </ul>
+
+              <golden-layout-root style="flex: 1">
+                <golden-layout-row>
+                  <golden-layout-row width="50">
+                    <golden-layout-component component-type="hello" title="hi2">
+                    </golden-layout-component>
+                    <golden-layout-component
+                      component-type="reactive-template"
+                      title="hi2"
+                      .state=${{ text: 'asdf' }}
+                    >
+                    </golden-layout-component>
+                  </golden-layout-row>
+                  <golden-layout-column width="10">
+                    <golden-layout-component title="hi" unclosable>
+                      <div><span>Custom Thing2</span></div>
+                    </golden-layout-component>
+                  </golden-layout-column>
+                </golden-layout-row>
+              </golden-layout-root>
+            </div>
+          </golden-layout>
+        `,
+        document.getElementById('layout')
       );
     </script>
   </body>
