--- a/demo/index.html
+++ b/demo/index.html
@@ -20,33 +20,34 @@
     <demo-app id="layout"></demo-app>
 
     <script type="module">
-      import {
-        GoldenLayout,
-        GoldenLayoutRow,
-        GoldenLayoutColumn,
-        GoldenLayoutComponent,
-        GoldenLayoutRegister,
-        GoldenLayoutDragSource,
-        GoldenLayoutRoot,
-      } from '../dist/index.js';
+      import '../dist/index.js';
       import { render, html, LitElement } from 'lit';
-      import { ScopedElementsMixin } from '@open-wc/scoped-elements';
 
       customElements.define(
         'demo-app',
-        class DemoApp extends ScopedElementsMixin(LitElement) {
+        class DemoApp extends LitElement {
           render() {
             return html`
-              <golden-layout id="layout">
+              <golden-layout
+                id="layout"
+                .scopedElements=${{
+                  'custom-span': class CustomSpan extends LitElement {
+                    render() {
+                      return html`customspan`;
+                    }
+                  },
+                }}
+              >
                 <golden-layout-register component-type="hello">
                   <template> <div>hi</div></template></golden-layout-register
                 >
                 <golden-layout-register
                   component-type="reactive-template"
-                  .template=${({ text }) =>
-                    html`<custom-span>${text}</custom-span>`}
+                  .template=${({ text }) => html`<custom-span></custom-span>`}
                 ></golden-layout-register>
-                <div style="display: flex; flex-direction: row; flex: 1">
+                <div
+                  style="display: flex; flex-direction: row; flex: 1; width: 100vw"
+                >
                   <ul>
                     <golden-layout-drag-source component-type="hello"
                       ><li>hii</li></golden-layout-drag-source
@@ -78,19 +79,6 @@
                 </div>
               </golden-layout>
             `;
-          }
-
-          static get scopedElements() {
-            return {
-              'golden-layout': GoldenLayout,
-              'golden-layout-row': GoldenLayoutRow,
-              'golden-layout-column': GoldenLayoutColumn,
-              'golden-layout-component': GoldenLayoutComponent,
-              'golden-layout-register': GoldenLayoutRegister,
-              'golden-layout-root': GoldenLayoutRoot,
-              'golden-layout-drag-source': GoldenLayoutDragSource,
-              'custom-span': class CustomSpan extends LitElement {},
-            };
           }
         }
       );
